made span dots, in a row, fixed some spacing etc

--- a/static/styles.css
+++ b/static/styles.css
@@ -128,7 +128,6 @@ header{
 }
 
 .three{
-
     text-align: center;
     padding:0;
 }
@@ -190,7 +189,7 @@ p{
 
 .input{
     padding-top:10px;
-    margin: 5 px;
+    margin: 5px;
 }
 
 
@@ -241,7 +240,7 @@ p{
 
 
 .col-md-4{
-    margin-top: 7%;
+    margin-top: 2%;
 }
 
 .col-md-6{
@@ -250,4 +249,21 @@ p{
 
 .contact-us{
     margin-top: 20px;
+}
+
+.dot {
+  height: 25px;
+  width: 25px;
+    border: 2px solid black;
+  background-color: whitesmoke;
+  border-radius: 50%;
+  display: inline-block;
+    z-index:3;
+    text-align: center;
+    margin: 10px;
+
+}
+
+.articles{
+    margin-top: 0;
 }
